--- a/public/global.css
+++ b/public/global.css
@@ -10,6 +10,11 @@ body {
   margin: 0;
   padding: 8px;
   box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif; */
+  font-family: "Pixelify Sans", sans-serif;
+}
+
+button {
+  font-family: "Pixelify Sans", sans-serif;
 }
